--- a/src/main/resources/assets/galacticraftcore/lang/es_ES.lang
+++ b/src/main/resources/assets/galacticraftcore/lang/es_ES.lang
@@ -1,8 +1,19 @@
+checklist.create_grapple.key=Crear gancho de agarre
+checklist.equip_oxygen_suit.key=Equipar traje de oxígeno
+checklist.equip_parachute.key=Equipar paracaídas
 command.gcastrominer.count=El contador de astro miner para el jugador %s es %s
+commands.emergencykit=%s recibió un kit de emergencia!
 commands.dimensionteleport=%s fue enviado a la atmósfera%s
 commands.dimensiontp.too_many=Demasiados argumentos de comando! Uso: %s
 commands.gcenergyunits.invalid_units=Unidades inválidas en comando /GCEnergyUnits. Uso: %s
 commands.gcenergyunits.no_units=Las unidades necesitan ser especificadas! Uso: %s
+commands.gchouston.confirm.1=Esto es el centro de comando de la misión, diga otra vez?
+commands.gchouston.confirm.2=(Para abandonar la misión, escriba /gchouston otra vez para confirmar.)
+commands.gchouston.fail=Command /gchouston es disponible solamente en el espacio (o en modo Creativo).
+commands.gchouston.help.1=Uh, Houston, tenemos un problema....
+commands.gchouston.help.2=(Escriba /gchouston para abandonar la misión y regresar a casa.)
+commands.gchouston.noop=Usar el comando /gchouston en otros jugadores es disponible solamente a operadores.
+commands.gchouston.success=OK, espere, %s, teleportando a la posicion de hogar en el Mundo Principal.
 commands.joinrace.no_team=El equipo debe ser especificado! Uso: %s
 commands.ssinvite.not_found=¡No se encuentran estaciones espaciales para tu nombre de usuario, necesitas viajar a ellas primero!
 commands.ssinvite.wrong_usage=¡Argumentos de comando insuficientes! Uso: %s
@@ -12,6 +23,7 @@ container.cargoloader.name=Plataforma de carga
 container.cargounloader.name=Plataforma de descarga
 container.fuelloader.name=Cargador de combustible
 container.lander.name=Aterrizador
+container.magneticcrafting.name=Creando
 container.oxygencollector.name=Recolector de oxígeno
 container.oxygencompressor.name=Compresor de oxígeno
 container.oxygendecompressor.name=Descompresor de oxígeno
